calmer sides, prevent flickering of menu toggle on hover

--- a/wp-content/themes/zenzero-aa/style.css
+++ b/wp-content/themes/zenzero-aa/style.css
@@ -15,13 +15,17 @@ Domain Path: /languages
 }
 
 .menu-toggle {
-    border: 0;
-    margin: 0;
-    padding: 1.5em;
+    border-color: transparent;
+    padding: 1.5em 1.5em;
     float: none;
 }
 
 @media screen and (max-width: 767px) {
+
+    .site-content {
+        padding-left: 2.5em;
+        padding-right: 2.5em;
+    }
 
     .site-header {
         padding-left: 1em;
@@ -67,6 +71,10 @@ h1 a {
 
 h2 a {
     color: inherit;
+}
+
+h4 {
+    font-size: 16px;
 }
 
 #toTop.showTop.withS {
